--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,21 @@
 version: 2.1
 orbs:
+  node: circleci/node@1.1.6
   heroku: circleci/heroku@0.0.10
 workflows:
+    build-and-test:
+      jobs:
+        - build-and-test
   heroku_deploy:
     jobs:
       - heroku/deploy-via-git
+jobs:
+  build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm test
