--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "start": "node dist/index.js",
     "start:dev": "nodemon -w ./src -x \"tsc && npm run start\" --ext ts,tsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./ --ext .js,.jsx,.ts,.tsx",
+    "lint:ci": "npm run lint:log & npm run lint:junit",
+    "lint:log": "eslint ./ --ext .js,.jsx,.ts,.tsx --output-file ~/logs/eslint.log --format unix",
+    "lint:junit": "eslint ./ --ext .js,.jsx,.ts,.tsx --format junit --output-file ~/reports/eslint.xml",
+    "lint:fix": "npm run lint --fix",
+    "unit": "jest --coverage",
+    "unit:ci": "npm run unit --ci --reporters=default --reporters=jest-junit",
+    "test": "npm run lint && npm run unit"
   },
   "repository": {
     "type": "git",
@@ -23,8 +30,22 @@
   },
   "homepage": "https://github.com/ukmadlz/logzio-webhook-to-report#readme",
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.13.4",
+    "@typescript-eslint/eslint-plugin": "^2.32.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "babel-jest": "^25.4.0",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-tsdoc": "^0.2.4",
+    "jest": "^25.4.0",
+    "jest-junit": "^10.0.0",
+    "ts-jest": "^25.4.0",
+    "@types/dotenv": "^8.2.0",
     "nodemon": "^2.0.3",
     "typescript": "^3.8.3"
   },
