Extend the jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
   heroku: circleci/heroku@0.0.10
+  logzio-orb: logzio/logzio-orb@1.0.1
 workflows:
   build-and-test:
     jobs:
@@ -21,5 +22,23 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
+            - run: mkdir -p ~/reports
+            - run: mkdir -p ~/logs
             - run: npm install
-            - run: npm test
+            - run:
+                name: Run linter
+                command: npm run lint:ci
+            - run:
+                name: Run unit tests with JUnit as reporter
+                command: npm run unit:ci
+                environment:
+                  JEST_JUNIT_OUTPUT_DIR: ~/reports
+            - store_test_results:
+                path: ~/reports
+            - store_artifacts:
+                path: ~/reports
+            - store_artifacts:
+                path:  ~/project/coverage/lcov-report
+                destination: coverage
+      - logzio-orb/submit:
+          dir-path: ~/logs
