--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "unit": "jest --coverage",
     "unit:ci": "npm run unit --ci --reporters=default --reporters=jest-junit",
     "test": "npm run lint && npm run unit",
-    "prepare": "tsc"
+    "build": "tsc",
+    "prepare": "npm build"
   },
   "repository": {
     "type": "git",
