--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,42 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
   heroku: circleci/heroku@0.0.10
-  logzio-orb: logzio/logzio-orb@1.0.1
+#   node: circleci/node@1.1.6
+  # logzio-orb: logzio/logzio-orb@1.0.1
+
+jobs:
+  build-and-test:
+    docker:
+      - image: circleci/node:12
+      - image: logzio/docker-collector-metrics
+        environment:
+          LOGZIO_TOKEN: ${LOGZIO_METRICS_TOKEN}
+          LOGZIO_MODULES: docker
+    steps:
+      - run:
+          name: npm install 
+          command: npm install --save
+      - run:
+          name: Run linter
+          command: npm run lint:ci
+      - run:
+          name: Run unit tests with JUnit as reporter
+          command: npm run unit:ci
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: ~/reports
+      - store_test_results:
+          path: ~/reports
+      - store_artifacts:
+          path: ~/reports
+      - store_artifacts:
+          path:  ~/project/coverage/lcov-report
+          destination: coverage
+      - run:
+          name: Be brutal to the memory
+          command: node -e "require('~/dist/memory-hog.js')(100000);"
+      # - logzio-orb/submit:
+      #     dir-path: ~/logs
+
 workflows:
   build-and-test:
     jobs:
@@ -13,37 +47,4 @@ workflows:
             - build-and-test
       - heroku/deploy-via-git:
           requires:
-            - release
-jobs:
-  build-and-test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: mkdir -p ~/reports
-            - run: mkdir -p ~/logs
-            - run: npm install
-            - run:
-                name: Run linter
-                command: npm run lint:ci
-            - run:
-                name: Run unit tests with JUnit as reporter
-                command: npm run unit:ci
-                environment:
-                  JEST_JUNIT_OUTPUT_DIR: ~/reports
-            - store_test_results:
-                path: ~/reports
-            - store_artifacts:
-                path: ~/reports
-            - store_artifacts:
-                path:  ~/project/coverage/lcov-report
-                destination: coverage
-      - node/with-cache:
-          steps:
-            - run:
-                name: Be brutal to the memory
-                command: node -e 'const memHog = require(\'~/dist/memory-hog.js\'); memHog(100000);'
-      - logzio-orb/submit:
-          dir-path: ~/logs
+            - release      
