--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: npm run unit:ci
       - run:
           name: Be brutal to the memory
-          command: node -e "require('~/dist/memory-hog.js')(100000);"
+          command: npm build && node -e "require('~/dist/memory-hog.js')(100000);"
 workflows:
   build-and-test:
     jobs:
