Change to running as the systen module

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,9 @@ jobs:
       - image: logzio/docker-collector-metrics
         environment:
           LOGZIO_TOKEN: ${LOGZIO_METRICS_TOKEN}
-          LOGZIO_MODULES: docker
+          LOGZIO_MODULES: system
     steps:
+      - run: cd /logzio && python metricbeat-yml-script.py
       - run:
           name: Install Git
           command: |
